--- a/ui/package.json
+++ b/ui/package.json
@@ -14,9 +14,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build ../server/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
